# astribot_kinematics

./: .gitignore  MUJOCO_LOG.TXT  README.md  install.sh  pyproject.toml
astribot_kinematics/: __init__.py  constants.py  fk.py  ik.py
astribot_kinematics/assets/: astribot_whole_body.urdf
astribot_kinematics/assets/meshes/s1_arm/: astribot_arm_left_base_link.STL  astribot_arm_left_link_2.STL  astribot_arm_link_1.STL  astribot_arm_link_3.STL  astribot_arm_link_4.STL  astribot_arm_link_5.STL  astribot_arm_link_6.STL  astribot_arm_link_7.STL  astribot_arm_right_base_link.STL  astribot_arm_right_link_2.STL
astribot_kinematics/assets/meshes/s1_head/: astribot_head_link_1.STL  astribot_head_link_2.STL
astribot_kinematics/assets/meshes/s1_torso/: astribot_torso_link_1.STL  astribot_torso_link_3.STL
tests/: VALIDATION_REPORT.md  run_fk_hdf5.py  run_ik_hdf5.py  test_against_sdk_hdf5.py  test_fk.py  test_ik.py
tests/simulation/: _sim_common.py  sim_interactive_ik.py  sim_meshcat_replay.py  sim_mujoco_fk.py  sim_mujoco_ik.py
